--- a/main.css
+++ b/main.css
@@ -60,6 +60,18 @@ h1 {
     margin-top: 1em;
 }
 
+.add-header {
+    margin-top: 1em;
+    margin-bottom: 2em;
+}
+
+textarea {
+    position: inherit;
+    height: 175px;
+    width: fit-content;
+    margin-bottom: 1em !important;
+}
+
 ul {
     margin-top: 1em !important;
     list-style-type: none;
@@ -71,7 +83,7 @@ p {
 }
 
 input {
-    flex-shrink: inherit;
+    flex-shrink: inherit !important;
     height: 50px;
     width: 350px;
     text-align: center;
